# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  configuration.yaml  general.yml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
