[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = {version = "0.4.23", default-features = false, features = ["clock"]}
config = "0.13"
reqwest = "0.11"
secrecy = {version = "0.8", features = ["serde"]}
serde = { version = "1", features = ["derive"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
uuid = { version = "1", features = ["v4"]}

[dev-dependencies]
once_cell = "1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]